shaku/tests/ui/provider_missing_component_dependency.stderr
error[E0277]: the trait bound `TestModule: HasComponent<(dyn DependencyTrait + 'static)>` is not satisfied
  --> $DIR/provider_missing_component_dependency.rs:22:1
   |
22 | / module! {
23 | |     TestModule {
24 | |         components = [],
25 | |         providers = [ProviderImpl]
26 | |     }
27 | | }
   | |_^ the trait `HasComponent<(dyn DependencyTrait + 'static)>` is not implemented for `TestModule`
   |
note: required because of the requirements on the impl of `Provider<TestModule>` for `ProviderImpl`
  --> $DIR/provider_missing_component_dependency.rs:14:10
   |
14 | #[derive(Provider)]
   |          ^^^^^^^^
15 | #[shaku(interface = ProviderTrait)]
16 | struct ProviderImpl {
   |        ^^^^^^^^^^^^
   = note: this error originates in the macro `module` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `TestModule: HasComponent<(dyn DependencyTrait + 'static)>` is not satisfied
  --> $DIR/provider_missing_component_dependency.rs:22:1
   |
22 | / module! {
23 | |     TestModule {
24 | |         components = [],
25 | |         providers = [ProviderImpl]
26 | |     }
27 | | }
   | |_^ the trait `HasComponent<(dyn DependencyTrait + 'static)>` is not implemented for `TestModule`
   |
  ::: $WORKSPACE/shaku/src/module/module_traits.rs
   |
   |   pub trait Module: ModuleInterface {
   |                     --------------- required by this bound in `Module`
   |
note: required because of the requirements on the impl of `Provider<TestModule>` for `ProviderImpl`
  --> $DIR/provider_missing_component_dependency.rs:14:10
   |
14 | #[derive(Provider)]
   |          ^^^^^^^^
15 | #[shaku(interface = ProviderTrait)]
16 | struct ProviderImpl {
   |        ^^^^^^^^^^^^
note: required because it appears within the type `TestModule`
  --> $DIR/provider_missing_component_dependency.rs:23:5
   |
23 |     TestModule {
   |     ^^^^^^^^^^
   = note: this error originates in the macro `module` (in Nightly builds, run with -Z macro-backtrace for more info)
